--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.webAutomation</groupId>
-    <artifactId>webAutomation</artifactId>
+    <groupId>GroupProject</groupId>
+    <artifactId>GroupProject</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Generic</module>
         <module>Ebay</module>
-        <module>Amazon</module>
+
 
     </modules>
 
     <dependencyManagement>
-
         <dependencies>
 
             <dependency>
@@ -24,6 +23,7 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.6</version>
             </dependency>
+
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
@@ -35,6 +35,7 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.13</version>
             </dependency>
+
             <dependency>
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongodb-driver</artifactId>
@@ -46,22 +47,25 @@
                 <artifactId>extentreports</artifactId>
                 <version>3.1.5</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+
             <dependency>
                 <groupId>com.relevantcodes</groupId>
                 <artifactId>extentreports</artifactId>
                 <version>2.41.2</version>
             </dependency>
+
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-java</artifactId>
                 <version>3.4.0</version>
             </dependency>
+
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-server</artifactId>
                 <version>3.4.0</version>
             </dependency>
+
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
@@ -69,10 +73,7 @@
 
             </dependency>
 
-
-
         </dependencies>
-
     </dependencyManagement>
     <build>
         <plugins>
